Update navbar and recipes page margins

--- a/recipes.html
+++ b/recipes.html
@@ -74,31 +74,21 @@
   <!-- Main Section -->
   <main>
 
+    <div class="card card-light" id="recipes-header-card">
+      <img src="assets/images/eating-delicous.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h3 class="card-title dark-text">Let's enjoy delicious recipes!</h3>
+
+        <p class="card-body dark-text">Here you are some delicious gluten-free recipe ideas that you can try,
+          whether you are looking for breakfast, lunch, dinner, or even snacks.</p>
+      </div>
+    </div>
+
 
     <div class="container text-center">
       <div class="row g-2">
 
-
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
-          <a href="#" class="recipe-link">
-            <div class="p-3 recipe-card-container">
-              <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/falafel.jpeg" class="recipe-img" alt="...">
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
-          <div class="card-body">
-            <h3 class="card-title dark-text">Falafel</h3>
-            <p> This recipe is for falafel in details</p>
-          </div>
-        </div>
-
-
-
-
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
           <a href="#" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
@@ -134,7 +124,7 @@
 
 
 
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
           <a href="#" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
@@ -152,7 +142,7 @@
 
 
 
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
           <a href="#" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
@@ -170,7 +160,7 @@
 
 
 
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
           <a href="#" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
@@ -188,7 +178,7 @@
 
 
 
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
           <a href="#" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
@@ -206,7 +196,7 @@
 
 
 
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
           <a href="#" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
@@ -224,7 +214,7 @@
 
 
 
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
           <a href="#" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
@@ -242,7 +232,7 @@
 
 
 
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
           <a href="#" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
@@ -260,7 +250,7 @@
 
 
 
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
           <a href="#" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
@@ -278,7 +268,7 @@
 
 
 
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
           <a href="#" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
@@ -296,7 +286,7 @@
 
 
 
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
           <a href="#" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
@@ -313,7 +303,7 @@
         </div>
 
 
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
           <a href="#" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
@@ -330,7 +320,7 @@
         </div>
 
 
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
           <a href="#" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
