Add links to celebrities photos

--- a/celebrities.html
+++ b/celebrities.html
@@ -110,7 +110,7 @@
 
 
                 <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                    <a href="https://en.wikipedia.org/wiki/Novak_Djokovic" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/novak-djokovic.webp" class="celebrity-img" alt="...">
@@ -124,7 +124,7 @@
 
 
                 <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                    <a href="https://en.wikipedia.org/wiki/Beren_Saat" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/beren-saat.jpg" class="celebrity-img" alt="...">
@@ -138,7 +138,7 @@
 
 
                 <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                    <a href="https://en.wikipedia.org/wiki/Meryem_Uzerli" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/meryem-uzerli.jpg" class="celebrity-img" alt="...">
@@ -152,7 +152,7 @@
 
 
                 <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                    <a href="https://en.wikipedia.org/wiki/Justin_Trudeau" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/justin-trudeau.jpg" class="celebrity-img" alt="...">
@@ -166,7 +166,7 @@
 
 
                 <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                    <a href="https://en.wikipedia.org/wiki/Sonam_Kapoor" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/sonam-kapoor.jpg" class="celebrity-img" alt="...">
@@ -180,7 +180,7 @@
 
 
                 <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                    <a href="https://en.wikipedia.org/wiki/Hend_Sabry" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/hend-sabry.webp" class="celebrity-img" alt="...">
@@ -194,7 +194,7 @@
 
 
                 <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                    <a href="https://en.wikipedia.org/wiki/Amal_Clooney" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/amal-clooney.webp" class="celebrity-img" alt="...">
@@ -208,7 +208,7 @@
 
 
                 <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                    <a href="https://en.wikipedia.org/wiki/Jeb_Bush" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/jeb-bush.jpeg" class="celebrity-img" alt="...">
@@ -222,7 +222,7 @@
 
 
                 <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                    <a href="https://en.wikipedia.org/wiki/Victoria_Beckham" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/victoria-beckham.webp" class="celebrity-img" alt="...">
@@ -236,7 +236,7 @@
 
 
                 <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                    <a href="https://en.wikipedia.org/wiki/Chelsea_Clinton" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/chelsea-clinton.jpg" class="celebrity-img" alt="...">
@@ -250,7 +250,7 @@
 
 
                 <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                    <a href="https://en.wikipedia.org/wiki/Laila_Elwi" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/laila-eloui.jpg" class="celebrity-img" alt="...">
@@ -264,7 +264,7 @@
 
 
                 <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                    <a href=https://en.wikipedia.org/wiki/Burcu_Esmersoy" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/burcu-esmersoy.jpg" class="celebrity-img" alt="...">
@@ -278,7 +278,7 @@
 
 
                 <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                    <a href="https://en.wikipedia.org/wiki/Nurg%C3%BCl_Ye%C5%9Fil%C3%A7ay" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/nurgül-yeşilçay.webp" class="celebrity-img" alt="...">
@@ -292,7 +292,7 @@
 
 
                 <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                    <a href="https://en.wikipedia.org/wiki/Shruti_Haasan" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/shruti-haasan.jpg" class="celebrity-img" alt="...">
@@ -306,7 +306,7 @@
 
 
                 <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                    <a href="https://en.wikipedia.org/wiki/Ece_Vahapo%C4%9Flu" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/ece-vahapoğlu.webp" class="celebrity-img" alt="...">
@@ -320,7 +320,7 @@
 
 
                 <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                    <a href="https://en.wikipedia.org/wiki/Demet_Akal%C4%B1n" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/demet-akalin.jpg" class="celebrity-img" alt="...">
@@ -334,7 +334,7 @@
 
 
                 <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                    <a href="https://ar.wikipedia.org/wiki/%D8%B1%D8%B2%D8%A7%D9%86_%D9%85%D8%BA%D8%B1%D8%A8%D9%8A" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/razan-moughrabi.jpeg" class="celebrity-img" alt="...">
@@ -349,7 +349,7 @@
 
 
                 <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                    <a href="https://en.wikipedia.org/wiki/Jennifer_Esposito" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/jennifer-esposito.jpg" class="celebrity-img" alt="...">
@@ -363,7 +363,7 @@
 
 
                 <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                    <a href="https://en.wikipedia.org/wiki/Gwyneth_Paltrow" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/gwyneth-paltrow.jpg" class="celebrity-img" alt="...">
@@ -377,7 +377,7 @@
 
 
                 <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                    <a href="https://en.wikipedia.org/wiki/Ryan_Phillippe" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/ryan-phillippe.jpg" class="celebrity-img" alt="...">
@@ -391,7 +391,7 @@
 
 
                 <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                    <a href="https://en.wikipedia.org/wiki/Shatha_Hassoun" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/shatha-hassoun.png" class="celebrity-img" alt="...">
@@ -404,7 +404,7 @@
                 </div>
 
                 <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                    <a href="#"  class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/farah.jpeg" class="celebrity-img" alt="...">
