--- a/index.html
+++ b/index.html
@@ -33,16 +33,13 @@
     <!-- Nav Bar inspired by BootStrap -->
     <nav class="navbar navbar-expand-lg container-fullwidth">
       <div class="container-fluid">
-        
+
         <a class="navbar-brand alegreya-sans-sc-bold" href="#">
           <img src="assets/images/logo.png" id="logo-image" alt="logo image beside website name">
-          <p>GluteniPedia</p></a>
+          <p>GluteniPedia</p>
+        </a>
 
 
-        <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button> -->
         <input id="menu-button" type="checkbox">
         <label for="menu-button"><span class="navbar-toggler-icon navbar-toggler"></span></label>
 
@@ -116,32 +113,12 @@
     <div class="card card-dark" id="card4">
       <div class="card-body">
         <h3 class="card-title dark-text">How to deal of celiac?</h3>
-        <p class="card-text dark-text">This is a wider card with supporting text below as a natural lead-in to
-          additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
-          additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
-          additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
-          additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
-          additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
-          additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
-          additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
-          additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
-          additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
-          additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
-          additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
-          additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
-          additional content.</p>
+        <p class="card-text dark-text"><strong>Living with a gluten-free diet may sometimes feel challenging, but remember, you
+          are taking control of your health and well-being, which is an incredible act of self-care. Every meal you
+          choose is a step towards a healthier, happier you. Embrace the journey with confidence, knowing that you are
+          not alone—millions of people are thriving on this path alongside you. Your strength and commitment to your
+          health are truly inspiring, and with every mindful choice, you are setting a powerful example of resilience
+          and self-love. Keep going—you’ve got this!​</p>
       </div>
     </div>
 
