--- a/recipes.html
+++ b/recipes.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GluteniPedia - Signup</title>
+  <title>GluteniPedia - Recipes</title>
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
@@ -50,7 +50,7 @@
               <a class="nav-link" aria-current="page" href="index.html"> Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="recipes.html"><strong><u>Recipes</u></strong></a>
+              <a class="nav-link active" href="recipes.html"><strong><u>Recipes</u></strong></a>
             </li>
 
             <li class="nav-item">
@@ -62,7 +62,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link active" href="signup.html">SignUp</a>
+              <a class="nav-link" href="signup.html">SignUp</a>
             </li>
           </ul>
         </div>
@@ -89,7 +89,7 @@
       <div class="row g-2">
 
         <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
-          <a href="#" class="recipe-link">
+          <a href="recipe.html" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
                 <img src="assets/images/recipes/rec1.jpg" class="recipe-img" alt="...">
@@ -269,7 +269,7 @@
 
 
         <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
-          <a href="#" class="recipe-link">
+          <a href="recipe.html" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
                 <img src="assets/images/recipes/rec11.jpg" class="recipe-img" alt="...">
