Update signup background image and margins

--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
   <main>
     <img src="assets/images/family-gathering-to-eat.jpg" id="bg-img" alt="family eating together">
 
+
+
+    
     <div class="card card-light" id="card1">
       <img src="assets/images/gf-1.jpg" class="card-img-top" alt="...">
       <div class="card-body">
@@ -87,7 +90,7 @@
     </div>
 
 
-    <div class="card card-dark" id="card2">
+    <!--<div class="card card-dark" id="card2">
       <img src="assets/images/foodmap.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h3 class="card-title dark-text">Food Map</h3>
@@ -95,7 +98,7 @@
           additional content.
           This content is a little bit longer.</p>
       </div>
-    </div>
+    </div>-->
 
 
     <div class="card card-light" id="card3">
@@ -112,7 +115,7 @@
 
     <div class="card card-dark" id="card4">
       <div class="card-body">
-        <h3 class="card-title dark-text">How to deal of celiac?</h3>
+        <h3 class="card-title dark-text">Life with gluten-free diet?</h3>
         <p class="card-text dark-text"><strong>Living with a gluten-free diet may sometimes feel challenging, but remember, you
           are taking control of your health and well-being, which is an incredible act of self-care. Every meal you
           choose is a step towards a healthier, happier you. Embrace the journey with confidence, knowing that you are
