--- a/celebrities.html
+++ b/celebrities.html
@@ -76,7 +76,7 @@
 
 
 
-        <div class="card card-light">
+        <div class="card card-light" id="celebrities-header-card">
             <img src="assets/images/fans.webp" class="card-img-top" alt="...">
             <div class="card-body">
                 <h3 class="card-title dark-text">Celebrities and Public Figures Living Gluten-Free</h3>
