--- a/recipes.html
+++ b/recipes.html
@@ -84,7 +84,6 @@
       </div>
     </div>
 
-
     <div class="container text-center">
       <div class="row g-2">
 
@@ -99,8 +98,13 @@
         </div>
         <div class="col-6 col-sm-6 col-md-6 col-lg-3">
           <div class="card-body">
-            <h3 class="card-title dark-text">Falafel</h3>
-            <p> This recipe is for falafel in details</p>
+
+            <label for="tog">Toggle</label>
+            <input type="checkbox" id="tog">
+            <div id="content">TEXT</div>
+
+            <!--<h3 class="card-title dark-text">Falafel</h3>
+            <p> This recipe is for falafel in details</p>-->
           </div>
         </div>
 
