--- a/signup.html
+++ b/signup.html
@@ -71,7 +71,7 @@
   </header>
 
   <!-- Main Section -->
-  <main>
+  <main id="signup-main">
     <section id="signup">
         <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net">
             <h2><i class="fa-solid fa-heartbeat"></i> Let's get you signed up!</h2>
